assets/css/less/main.less
/* ... */
.photo span.date {
    font-size: 1.5em;
}

.gallery {
    overflow: hidden;

    figure {
        width: 100%;
        float: left;
        clear: none;
        padding: 0 .5%;
    }

    img {
        margin-top: 1%;
    }

    figcaption {
        span {
            height: 2em;
            overflow: hidden;
            white-space: nowrap;
            text-overflow: ellipsis;
            display: block;
        }
    }
}

.pagination {
    width: 100%;
    text-align: center;
    font-size: 1.5em;

    a, strong {
        padding: 5px 10px;
        margin: 10px 3px 0 3px;
        .rounded(2px);

        display: inline-block;
    }

    strong {
        background: @dark-blue;
        color: @light-grey;
    }

    a {
        background: @light-grey;

        &:hover {
            background: @dark-blue;
            color: @light-grey;
            border: none;
        }
    }
}

// Homepage latest posts
#homeLatestPosts {
    dd {
        color: lighten(@dark-grey, 25%);
        font-size: 85%;
        line-height: 115%;
        margin-bottom: 10px;
    }
}

// Images

figure {
    width: 100%;
    clear: both;
    text-align: center;
    border-top: 1px solid @light-grey;
    border-bottom: 1px solid @light-grey;
    padding: 10px 0;
    margin: 10px 0;

    img {
        margin: 0 auto;
        position: relative;
        max-width: 100%;
        height: auto;
    }

    figcaption {
        color: @med-grey;
        font-size: 120%;
    }
}

.feature figure {
    padding: 0;
    overflow: hidden;
    position: relative;

    a {
        border: none;
        background: transparent;
    }

    img {
        padding-top: 9px;
    }

    &.preview {
        border: none;
        margin: 5px 0;

        img {
            float: left;
            border: 1px solid @med-grey;
            padding: 0;
        }

        figcaption {
            text-align: left;
            padding: 15px 0 0 60px;
        }
    }
}

dl.cv {
    padding: 10px 0;
    width: 100%;

    dd {
        padding: 5px 0 0 0;
        color: #333;
        font-size: 90%;
    }
}

.photo hgroup,
.photo p,
.photo figcaption,
.photo h3,
.photo ul,
.main.easyread {
    padding-left: 2%;
    padding-right: 2%;
}

/* Flickr */

#flickr_content {
    text-align: center;

    ul {
        padding: 10px 0 0 0;
        margin: 0;
    }

    li {
        list-style: none;
        padding: 0;
        margin: 0;
        display: inline;
    }

    img {
        width: 14%;
        height: auto;
        border: 1px solid @med-grey;
        padding: 1%;
        margin: 1%;
        .transition(0.25s, ease-in-out);

        &:hover {
            background: @med-grey;
        }
    }

    a, a:hover {
        border: none;
        background: none;
    }

    h2 {
        text-align: left;
    }
}

@media screen and (min-width: 1px) {
    .page {
        border: none;
    }
}

@media screen and (min-width: 768px) {
    body {
        font-size: 65%;
    }

    .page {
        max-width: 1024px;
    }

    header p {
        font-size: 1em;
    }

    .columns-3, .columns-2 {
        .wrap {
            .columns( 2, 35px );
        }
    }

    .col {
        padding-left: 1.5%;
        padding-right: 1.5%;

        .col {
            width: 47%;
            padding: 0 0 40px 0;
            float: left;
            margin: 0 1.5%;
        }
    }

    .photo hgroup,
    .photo p,
    .photo figcaption,
    .photo h3,
    .photo ul,
    .easyread,
    figure.restrict img {
        max-width: 830px;
        margin: 0 auto;
        position: relative;
        padding-left: 0;
        padding-right: 0;
    }

    figure.restrict img {
        max-height: 100%;
    }

    .photo ul {
        max-width: 770px;
    }

    .photo span.date {
        display: inline-block;
    }

    .post-list {
        .columns(2, 35px);
        padding: 0 1.5%;
    }

    .post-list-excerpt .col {
            padding: 0 1.5%;
    }

    .title {
        padding: 2%;
        margin-bottom: 2%;
    }

    .photo .excerpt {
        height: 3.5em;
    }

    // Homepage latest posts
    #homeLatestPosts {
        overflow: hidden;

        dd, dt {
            float: left;
        }

        dt {
            clear: left;
        }

        dd {
            padding-left: 1em;
            padding-top: 6px;
        }
    }

    dl.cv {
        float: left;
        clear: both;

        dt {
            float: right;
            width: 80%;
        }

        dd {
            &.date {
                float: left;
                width: 20%;
            }

            &.detail {
                float: left;
                clear: both;
                padding-left: 20%;
            }
        }
    }

    pre {
        padding: 2%;
    }

    .gallery {
        figure {
            width: 32.7%;
            padding: 0 .3%;
        }
    }
}

@media screen and (min-width: 850px) {
    nav {
        text-align: center;

        ul {
            border-bottom: 1px solid @dark-blue;
            width: 75%;
            margin: 0 auto;
            overflow: hidden;
            text-align: center;
        }

        li {
            width: auto;
            display: inline;
            margin: 0;
            float: none;
        }

        a {
            display: inline-block;
            padding: 10px 20px 7px 20px;
            border-bottom: 2px solid white;

            &.current_page_item {
                border-bottom: 2px solid @dark-blue;
            }

            &:hover {
                padding-left: 20px;
                border-bottom: 2px solid @dark-blue;
            }
        }
    }
}
/* ... */

